--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^6.1.0",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-notification": "^1.3.20",
