--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "my-first-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
+   
   },
   "dependencies": {
     "axios": "^0.21.1",
