--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 DB_HOST=mongodb+srv://admin:NodeJs@cluster0.dgyml.mongodb.net/db-ECommerce?retryWrites=true&w=majority
-PORT=3000
+PORT=https://clothes-e.herokuapp.com
 JWT_SECRET_KEY=secret
